<resources>

    <!-- Base application -->
    <string name="app_name">DofusMaker</string>
    <string name="test_string">DofuMaker</string>

    <!-- Main Menu -->
    <string name="main_menu_button2">My characters</string>
    <string name="main_menu_button3">News</string>
    <string name="main_menu_button4">Log-in</string>

    <!-- News Menu -->
    <string name="news_menu_headtitle">News</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_my_perso">MyPerso</string>

    <!--Create perso-->
    <string name="cname">Name</string>
    <string name="clvl">Level</string>
    <string name="carstr">Strength</string>
    <string name="caragi">AGI</string>
    <string name="carluk">Luck</string>
    <string name="carint">Intelligence</string>
    <string name="descr">Description</string>
    <string name="succ">Success</string>
    <string name="create_perso">Create a character</string>
    <string name="save">Save</string>
    <string name="jlvl">LVL</string>
    <string name="objectives">My objectives</string>


    <!-- Display perso -->
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="wait">Please wait</string>
    <string name="load">The application is preparing itself...</string>
    <string name="night_mode">Night mode</string>

    <!--my obj-->
    <string name="view_obj">See my current Objectives</string>
    <string name="obj_title">Title</string>
    <string name="obj_content">Objective</string>
    <string name="delete">Delete</string>
    <string name="set_objective">Set an objective</string>
    <string name="Set_date">Set a date</string>

</resources>
